# ExtractLola-2021

./: .gitignore  .project  README.md  build.sh
lola2/src/: CC.csh  CF.csh  DL.csh  GP.csh  HO.csh  LC.csh  LF.csh  LV.csh  Makefile.am  Makefile.in  OS.csh  QL.csh  RC.csh  RF.csh  RV.csh  SM.csh  UB.csh  cmdline.ggo  config.h.in~  k.cc  k.h  memoryWatcher.sh  myconf
lola2/src/Core/: Dimensions.h  Handlers.cc  Main.cc  Runtime.cc  Runtime.h  mysemaphore.cc  mysemaphore.h
lola2/src/CoverGraph/: CoverGraph.cc  CoverGraph.h
lola2/src/EstimateMaxMarking/: CreateLP.cc  CreateLP.h  lp.txt  lpResult.txt
lola2/src/Exploration/: AutomorphismGraph.cc  AutomorphismGraph.h  CTLExploration.cc  CTLExploration.h  ChooseTransition.h  ChooseTransitionHashDriven.cc  ChooseTransitionHashDriven.h  ChooseTransitionRandomly.h  ComputeBoundExploration.cc  ComputeBoundExploration.h  ComputeBoundExplorationRelaxed.cc  ComputeBoundExplorationRelaxed.h  ComputePlacesBounds.cc  ComputePlacesBounds.h  Constraints.cc  Constraints.h  DFSExploration.cc  DFSExploration.h  DeadlockExploration.cc  DeadlockExploration.h  EFEGExploration.cc  EFEGExploration.h  EGEFExploration.cc  EGEFExploration.h  EGExploration.cc  EGExploration.h  ERExploration.cc  ERExploration.h  EUExploration.cc  EUExploration.h  EXEFExploration.cc  EXEFExploration.h  EXEGExploration.cc  EXEGExploration.h  EXERExploration.cc  EXERExploration.h  EXEUExploration.cc  EXEUExploration.h  Firelist.cc  Firelist.h  (+46 more)
lola2/src/Formula/: FormulaInfo.h  FormulaStatistics.h
lola2/src/Formula/CTL/: AFFormula.cc  AFFormula.h  AGFormula.cc  AGFormula.h  ARFormula.cc  ARFormula.h  AUFormula.cc  AUFormula.h  AXFormula.cc  AXFormula.h  AtomicFormula.cc  AtomicFormula.h  CTLFormula.cc  CTLFormula.h  ConjunctionFormula.cc  ConjunctionFormula.h  DFSFormula.h  DisjunctionFormula.cc  DisjunctionFormula.h  EFFormula.cc  EFFormula.h  EGFormula.cc  EGFormula.h  ERFormula.cc  ERFormula.h  EUFormula.cc  EUFormula.h  EXFormula.cc  EXFormula.h  NotFormula.cc  NotFormula.h
lola2/src/Formula/LTL/: BuechiAutomata.cc  BuechiAutomata.h  BuechiAutomata.h.old  BuechiFromLTL.h  alternating.c  cache.c  generalized.c  ltl2ba.h  ltlmain.c  parse.c  rewrt.c  set.c  trans.c
lola2/src/Formula/StatePredicate/: AtomicBooleanPredicate.cc  AtomicBooleanPredicate.h  AtomicStatePredicate.cc  AtomicStatePredicate.h  DeadlockPredicate.cc  DeadlockPredicate.h  FalsePredicate.cc  FalsePredicate.h  FireablePredicate.cc  FireablePredicate.h  MagicNumber.cc  MagicNumber.h  StatePredicate.cc  StatePredicate.h  Term.cc  Term.h  TruePredicate.cc  TruePredicate.h
lola2/src/Frontend/Parser/: LexicBuechi.cc  LexicBuechi.ll  LexicFormula.cc  LexicNet.ll.col  ParserBuechi.cc  ParserBuechi.hh  ParserBuechi.yy  ParserFormula.cc  ParserFormula.hh  ParserFormula.yy  ParserNet.cc  ParserNet.hh  ParserNet.yy  ParserNet.yy.col  ParserPTNet.cc  ParserPTNet.h  ParserPnml.cc  ParserPnml.h  ValueAutomaton.cc  ValueAutomaton.h  ast-system-k.cc  ast-system-k.h  ast-system-rk.cc  ast-system-rk.h  ast-system-unpk.cc  ast-system-unpk.h  ast-system-yystype.h  diagnosis.cc  diagnosis.h  formula_abstract.cc  formula_abstract.h  formula_abstract.k  formula_rewrite.cc  formula_rewrite.h  formula_rewrite.k  formula_unparse.cc  formula_unparse.h  formula_unparse.k  formula_unparse.k.old  symboltable.cc  (+2 more)
lola2/src/Frontend/SymbolTable/: ArcList.cc  ArcList.h  PlaceSymbol.cc  PlaceSymbol.h  Symbol.cc  Symbol.h  SymbolTable.cc  SymbolTable.h  TransitionSymbol.cc  TransitionSymbol.h
lola2/src/Frontend/Unfold/: MMMakefile  abstract.cc  abstract.h  abstract.k  diagnosis.cc  diagnosis.h  k.cc  k.h  levenshtein.h  main.cc  moco  parser.yy  rewrite.cc  rewrite.h  rewrite.k  rk.cc  rk.h  scanner.cc  scanner.ll  symboltable.cc  symboltable.h  unfold.cc  unfold.h  unparse.cc  unparse.h  unparse.k  unpk.cc  unpk.h  yystype.h
lola2/src/Highlevel/: AkzeptorNew.tar  MMM  abstract.k  main.cc  scanner.cc  scanner.h  unparse.k
lola2/src/InputOutput/: InputOutput.cc  InputOutput.h  JSON.cc  Reporter.cc
lola2/src/Memory/: Mara.cc  Mara.h  predefined.h
lola2/src/Net/: LinearAlgebra.cc  LinearAlgebra.h  NetState.cc  NetState.h  Petrinet.cc  Petrinet.h  Protonet.cc  Protonet.h
lola2/src/Planning/: AFAGTask.h  AFTask.h  AGAFTask.h  AGEFAGTask.h  AGEFTask.cc  AGEFTask.h  ARTask.h  AUTask.h  AXAFTask.h  AXAGTask.h  AXARTask.h  AXAUTask.h  CTLTask.cc  CTLTask.h  CompoundTask.cc  CompoundTask.h  ComputeBoundFindpathTask.cc  ComputeBoundFindpathTask.h  ComputeBoundSearchTask.cc  ComputeBoundSearchTask.h  ComputeBoundStateEquationTask.cc  ComputeBoundStateEquationTask.h  ComputeBoundTask.cc  ComputeBoundTask.h  ConjunctionTask.cc  ConjunctionTask.h  DeadlockFindpathTask.cc  DeadlockFindpathTask.h  DeadlockSearchTask.cc  DeadlockSearchTask.h  DeadlockTask.h  DisjunctionTask.cc  DisjunctionTask.h  EFAGEFTask.cc  EFAGEFTask.h  EFAGTask.h  EFEGTask.cc  EFEGTask.h  EGEFTask.cc  EGEFTask.h  (+41 more)
lola2/src/Portfolio/: portfoliomanager.cc  portfoliomanager.h
lola2/src/Rapidxml/: rapidxml_iterators.h  rapidxml_print.h  rapidxml_utils.h
lola2/src/ReachabilitySAT_Lukas/: lola2minisat.cc  lola2minisat.h
lola2/src/Siphon/: lola2minisat.cc  lola2minisat.h
lola2/src/Stores/: CompareStore.h  CompareStore.inc  CycleStore.h  EmptyStore.h  PluginStore.h  PluginStore.inc  Store.h  Store.inc  SymmetryStore.h
lola2/src/Stores/NetStateEncoder/: BitEncoder.cc  BitEncoder.h  CopyEncoder.cc  CopyEncoder.h  FullCopyEncoder.cc  FullCopyEncoder.h  NetStateEncoder.cc  NetStateEncoder.h  SimpleCompressedEncoder.cc  SimpleCompressedEncoder.h
lola2/src/Stores/VectorStores/: HashingWrapperStore.h  HashingWrapperStore.inc  PrefixTreeStore.h  PrefixTreeStore.inc  VBloomStore.h  VBloomStore.inc  VSTLStore.cc  (+3 more)
lola2/src/SweepLine/: Sweep.h  Sweep.inc  SweepEmptyStore.cc  SweepEmptyStore.h  SweepListStore.h  SweepListStore.inc  SweepRingStore.h  SweepRingStore.inc
lola2/src/Symmetry/: AutomorphismGraph.cc  AutomorphismGraph.h  Constraints.cc  Constraints.h  Symmetry.cc  Symmetry.h
lola2/src/Witness/: Condition.cc  Condition.h  Event.cc  Event.h  Path.cc  Path.h
(+59 files in other folders)
